# stash

./: .gitignore  .hgignore  Makefile  README.rst  pyproject.toml  setup.py
Linux/: stash.desktop
Mac/: Info.plist  Stash.py  doc  dotDS_Store  make.py  release.py  setup.py  stash  stash_icon.icns
Win32/: Stash.spec  release.py  setup.py
Windows/: Stash.py
documentation/: Makefile  make.bat
documentation/source/: conf.py  index.rst  module.rst
src/stash/: __init__.py  app.py  browse.py  schema.py  shell.py  stash.py  theme.py  tree.py
stash/: __init__.py  app.py  betree.py  fod.py  shell.py  stash.py  theme.py
tools/: migrate_stash.py
